--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
     text-align: center;
     max-width: 800px;
     width: 100%;
+    min-width: 320px;
 }
 
 h1 {
@@ -94,17 +95,15 @@ button:hover {
 
 .game-container {
     position: relative;
-    width: 100%;
+    width: 700px;
     height: 500px;
-    margin: 20px 0;
+    margin: 20px auto;
 }
 
 #gameCanvas {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     z-index: 1;
     border: 2px solid #333;
     border-radius: 5px;
@@ -282,5 +281,14 @@ button:hover {
     100% {
         opacity: 0;
         transform: translate(-50%, -20px);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .game-container {
+        width: 100%;
+        max-width: 700px;
+        height: auto;
+        aspect-ratio: 700/500;
     }
 } 
